# shirase

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
module/: default.nix
src/: config.rs  lib.rs  main.rs  mcp.rs  scripting.rs
src/daemon/: mod.rs
src/filter/: mod.rs
src/history/: mod.rs
src/input/: mod.rs
src/notification/: mod.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs
src/render/: mod.rs
