[package]
name = "shirase"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Shirase (知らせ) — notification center for macOS and Linux"
homepage = "https://github.com/pleme-io/shirase"
repository = "https://github.com/pleme-io/shirase"
readme = "README.md"
license = "MIT"
categories = ["os::macos-apis"]
keywords = ["notifications", "alerts", "macos", "notification-center"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
shikumi = { git = "ssh://git@github.com/pleme-io/shikumi" }
tsuuchi = { git = "ssh://git@github.com/pleme-io/tsuuchi" }
tsunagu = { git = "ssh://git@github.com/pleme-io/tsunagu" }
arc-swap = "1.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
